<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HelpActivity" >

    <TextView
        android:id="@+id/digit_alone_help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/digit_alone_help_message_text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/digit_many_help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/digit_alone_help_message"
        android:text="@string/digit_many_help_message_text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/character_alone_help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/digit_many_help_message"
        android:text="@string/character_alone_help_message_text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/character_many_help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/character_alone_help_message"
        android:text="@string/character_many_help_message_text"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/example_help_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/character_many_help_message"
        android:text="@string/example_help_message_text"
        android:textSize="18dp" />

</RelativeLayout>